--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Chat app better than telegram",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "lint": "eslint"
   },
   "keywords": [
     "chat",
@@ -18,6 +19,10 @@
     "express": "^4.18.2",
     "mongodb": "^5.6.0",
     "mongoose": "^7.2.2",
-    "nodemon": "^2.0.22"
+    "nodemon": "^2.0.22",
+    "prettier": "^2.3.2",
+    "eslint": "^7.32.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-prettier": "^3.4.1"
   }
 }
