--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "lint": "eslint"
+    "lint": "eslint",
+    "dev": "nodemon server.js",
+    "start": "node server.js"
   },
   "keywords": [
     "chat",
@@ -16,13 +18,15 @@
   "license": "MIT",
   "dependencies": {
     "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
+    "eslint": "^7.32.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-prettier": "^3.4.1",
     "express": "^4.18.2",
     "mongodb": "^5.6.0",
     "mongoose": "^7.2.2",
+    "multer": "^1.4.5-lts.1",
     "nodemon": "^2.0.22",
-    "prettier": "^2.3.2",
-    "eslint": "^7.32.0",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-prettier": "^3.4.1"
+    "prettier": "^2.3.2"
   }
 }
